--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "Suivi de culture <contact@Suivideculture.com> (http://suivideculture.com)",
+  "author": "livre de recette",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
@@ -26,7 +26,6 @@
     "node-notifier": "^8.0.0",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.4",
-    "react-google-invisible-recaptcha": "^0.2.11",
     "react-router-dom": "^5.1.2",
     "session-file-store": "^1.4.0"
   },
